--- a/home.html
+++ b/home.html
@@ -206,7 +206,7 @@ A wildlife species facing imminent extirpation or extinction.</p>
 
             </div>
  
-                <h2 class="section-title ta-center">Why are Capybara's Endangered</h2>
+                <h2 class="section-title ta-center">Why are Capybara's Endangered?</h2>
                 <div class="rte ta-center">
                 <p style="text-align: left;">Capybaras are naturally threatened by jaguars, caimans and anacondas, and their young can be taken by ocelots and harpy eagles. Their main threat, however, is humans — they are hunted extensively for their meat and their hide, which can be made into leather.</p>
                 <p style="text-align: left;">In some countries, the practice of farming capybaras has sprung up, relieving some of the pressure on wild populations. As with all rainforest inhabitants, deforestation also poses a threat.</p>
